--- a/css/master.css
+++ b/css/master.css
@@ -3,7 +3,7 @@
 /* Text inside these asterisks and slashes are comments for human */
 
   a {
-    color: #fffdd0;/* set the text color to blue here */
+    color: #93e9be;/* set the text color to blue here */
     text-decoration: none; /* This means we do not want hyperlinks to be underlined */
   }
 
@@ -13,8 +13,8 @@
   }
 
   body {
-    background-color: #b23028 ;/* set the background color here */
-    color: white;/* set the text color to black here */
+    background-color: #009e60 ;/* set the background color here */
+    color: darkblue;/* set the text color to black here */
     font-family: Arial, Helvetica, sans-serif;/* set the font here */
     Text-align: center;/* set the text alignment here */
    }
@@ -32,7 +32,7 @@
   h2 {
     margin-bottom: 2.5rem;
     margin-top: 2.5rem;
-    color: #364651;
+    color: #ffe5b4;
     /* set both the bottom margin and top margin to 2.5rem here */
    }
 
